--- a/02-api/src/index.html
+++ b/02-api/src/index.html
@@ -3,21 +3,20 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>02-router</title>
+  <title>02-api</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 </head>
 <body>
 <div class="container">
   <header class="page-header">
-    <h1>02-router</h1>
+    <h1>02-api</h1>
     <nav>
-      <a href="/">Home</a>
-      <a href="/players/magnus">Magnus</a>
-      <a href="/players/sergey">Sergey</a>
-      <a href="/contact">Contact</a>
+      <a href="/">Drivers</a>
+      <a href="/constructors">Constructors</a>
     </nav>
   </header>
   <div class="row">
