--- a/02-api/src/index.html
+++ b/02-api/src/index.html
@@ -14,9 +14,16 @@
 <div class="container">
   <header class="page-header">
     <h1>02-api</h1>
-    <nav>
-      <a href="/">Drivers</a>
-      <a href="/constructors">Constructors</a>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/">Formel 1</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li><a href="/">Drivers</a></li>
+          <li><a href="/constructors">Constructors</a></li>
+        </ul>
+      </div>
     </nav>
   </header>
   <div class="row">
