--- a/04-d3/src/index.html
+++ b/04-d3/src/index.html
@@ -22,6 +22,7 @@
         <ul class="nav navbar-nav">
           <li><a href="/">Drivers</a></li>
           <li><a href="/constructors">Constructors</a></li>
+          <li><a href="/diagram">Fancy Graphic</a></li>
         </ul>
       </div>
     </nav>
